--- a/blog/201911/201911.md
+++ b/blog/201911/201911.md
@@ -1,5 +1,10 @@
-##2019年11月
+## 2019年11月
 
-**第一篇博客**
+**博文**
+
 - [3D数学中角位移的表示：矩阵、欧拉角和四元数](./AngularDisplacementInMath.html)
+- [Lua语言学习1：基本语法和数据类型](./LearnLuaBasic01.md)
 
+&nbsp;
+
+[返回主页](https://kimomi.github.io/)
